src/styles/dropdowns.less
@import (reference) "./mixins";
@import (reference) "./variables";

//
// Dropdown menus
// --------------------------------------------------

// Carets used in dropdowns, buttons, etc.
//
// Replace default caret with chevron fycon
.caret,
.dropup {
  .fycon-sm;
  width: auto;
  height: auto;
  border: 0;
  font-family: "fycons-@{fycon-font-version}" !important;
  font-style: normal !important;
  font-weight: normal !important;
  font-variant: normal !important;
  text-transform: none !important;
  speak: none;
  line-height: inherit;
  display: inline-block;
  vertical-align: middle;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.caret {
  .fycon-arrow-down;
}

.dropup {
  .fycon-arrow-up;
}


// The dropdown menu (ul)
.dropdown-menu {
  margin-top: 8px; // Make room for arrow
  .box-shadow(0 0 10px rgba(0, 0, 0, 0.2));
   
  // Links within the dropdown menu
  > li > a {
    padding: 5px 20px;
  }
}

// Menu aligmnment options
// 
// Use alongside .dropdown-menu. Ex: <ul class="dropdown-menu dropdown-menu-right">

.dropdown-menu-right, // .dropdown-menu-right introduced in BS v3.1.0 (.pull-right was deprecated)
.pull-right > .dropdown-menu { // Helps with specificity when .pull-right is applied to the container
  left: auto; // TODO: Remove once LF-BS's version of BS has been updated.
  right: -6px; // BS uses right:0 but since we're using arrows, we need more room.
}

.dropdown-menu-center {
  right: auto;
  left: 50%;
  .translate(-50%, 0);
}

// Arrows
//
// Little, white arrow atop the dropdown menu.

.dropdown-menu:before {
  display: block;
  position: absolute;
  top: -6px;
  left: 10px;
  width: 0;
  height: 0;
  content: "";
  border: 7px solid; // 7px thickness is 1px more than top (-6px) to prevent bottom of arrow getting clipped in rare instances.
  border-color: transparent transparent @dropdown-bg @dropdown-bg;
  .rotate(135deg);
  .box-shadow(-4px 4px 6px 0 rgba(0, 0, 0, 0.08));
}

.dropdown-menu-right:before {
  left: auto;
  right: 10px;        
}

.dropdown-menu-center:before {
  left: 50%;        
  right: auto;
  margin-left: -6px;
}

